fix infinite scroll stuck

--- a/styles/scss/article/_articleGridDetail.scss
+++ b/styles/scss/article/_articleGridDetail.scss
@@ -1,5 +1,5 @@
 .article-grid {
-  margin: rem(32px) 0 rem(128px) 0;
+  margin-top: rem(32px);
   display: grid;
   gap: rem(16px);
   grid-template-columns: 1fr 1fr 1fr;
