--- a/styles/scss/utilities/_other.scss
+++ b/styles/scss/utilities/_other.scss
@@ -2,6 +2,5 @@
   background: var(--color-bg-primary);
   text-align: center;
   padding: rem(16px);
-  margin-bottom: rem(64px);
   border-radius: 5px;
 }
